--- a/template/css/custom.css
+++ b/template/css/custom.css
@@ -20,3 +20,23 @@ File Description: Place here your custom CSS styles
     font-size: 1.2rem;
     line-height: 1.25;
 }
+
+.overlay-container-2 {
+    position: relative;
+    display: block;
+    text-align: center;
+    overflow: hidden;
+}
+
+h4.text-white.section-caller {
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.section-text {
+    font-size: 1.0rem;
+}
+
+.icon-circle-small {
+    width: 25px;
+}
