--- a/template/index.html
+++ b/template/index.html
@@ -440,7 +440,7 @@
 
               <div class="row">
                 <div class="col-md-4 ">
-                  <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible mb-20" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-1.svg"></span>
                     <h3>Visão Computacional</h3>
                     <div class="separator clearfix"></div>
@@ -449,7 +449,7 @@
                   </div>
                 </div>
                 <div class="col-md-4 ">
-                  <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible mb-20" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-2.svg"></span>
                     <h3>Inteligência Artificial</h3>
                     <div class="separator clearfix"></div>
@@ -458,7 +458,7 @@
                   </div>
                 </div>
                 <div class="col-md-4 ">
-                  <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible mb-20" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
                     <h3>Câmeras Hiperespectrais</h3>
                     <div class="separator clearfix"></div>
@@ -492,7 +492,7 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center">
-            <div class="overlay-container">
+            <div class="overlay-container-2">
               <img src="images/case-1.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Detalhe</p>
@@ -508,7 +508,7 @@
         </div>
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center">
-            <div class="overlay-container">
+            <div class="overlay-container-2">
               <img src="images/case-2.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Detalhe</p>
@@ -524,7 +524,7 @@
         </div>
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center">
-            <div class="overlay-container">
+            <div class="overlay-container-2">
                 <img src="images/case-3.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Detalhe</p>
@@ -540,7 +540,7 @@
         </div>
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center">
-            <div class="overlay-container">
+            <div class="overlay-container-2">
                 <img src="images/case-4.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
@@ -571,16 +571,20 @@
               <div class="call-to-action">
                 <div class="row">
                   <div class="col-sm-12 text-center">
-                    <h3 class="mt-10 text-white">Realizamos projetos para o seu negócio. Entre em contato:</h3>
+                    <h4 class="mt-10 text-white section-caller">Realizamos projetos para o seu negócio. Entre em contato:</h4>
                   </div>
                 </div>
+
                 <div class="row">
-                  <div class="col-sm-12 text-center">
-                    <i class="fa fa-phone pr-2 text-default"></i> (+55)(11) 4302-5902
-                    <a href="mailto:contato@mvisia.com.br"><i class="fa fa-envelope-o pr-2 text-default"></i>contato@mvisia.com.br</a>
-                    <i class="fa fa-whatsapp pr-2 text-default"></i> (+55) (11) 98134-9727
+                  <div class="col-md-12 text-center">
+                    <ul class="list-inline">
+                      <li class="list-inline-item"><a href="tel:+00 1234567890" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</a></li>
+                      <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</a></li>
+                      <li class="list-inline-item"><a href="" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
+                    </ul>
                   </div>
                 </div>
+
               </div>
             </div>
           </div>
@@ -714,14 +718,14 @@
               <div class="call-to-action">
                 <div class="row">
                   <div class="col-sm-12 text-center">
-                    <h3 class="mt-10 text-white">A MVisia é uma empresa 100% brasileira</h3>
+                    <h4 class="mt-10 text-white section-caller">A MVisia é uma empresa 100% brasileira</h4>
                   </div>
                 </div>
                 <div class="row">
                   
                   <div class="col-md-6">
                     <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                      <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></img></span>
+                      <span class="icon default-bg small circle"><img class="icon-circle-small" src="images/icon-benefit-1.svg"></img></span>
                       <div class="body">
                         <h4 class="title">Soluções sem custos de importação</h4>
                       </div>
@@ -730,7 +734,7 @@
 
                   <div class="col-md-6">
                     <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                      <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></img></span>
+                      <span class="icon default-bg small circle"><img class="icon-circle-small" src="images/icon-benefit-6.svg"></img></span>
                       <div class="body">
                         <h4 class="title">Garantia e assistência técnica capacitada</h4>
                       </div>
@@ -817,11 +821,11 @@
         <div class="separator"></div>
         
         <div class="row">
-          <div class="col-md-12">
-            <h3 class="page-title text-center">Realizamos projetos sob medida para o seu negócio. Entre em contato:</strong></h3>
+          <div class="col-md-12 text-center">
+            <h4 class="mt-10 section-caller">Realizamos projetos sob medida para o seu negócio. Entre em contato:</h4>
           </div>
         </div>
-        
+
         <div class="row">
           <div class="col-md-12 text-center">
             <ul class="list-inline mb-40">
