--- a/template/page-case-1.html
+++ b/template/page-case-1.html
@@ -283,7 +283,7 @@
           <div class="container">
             <h3>Como funciona</h3>
             <div class="separator-2"></div>        
-            <div class="row">
+            <div class="row d-flex row-eq-height">
 
               <div class="col-md-3">
                 <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
