--- a/template/index.html
+++ b/template/index.html
@@ -492,7 +492,7 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="image-box style-2 mb-20 bordered dark-bg text-center">
-            <div class="overlay-container-2">
+            <div class="overlay-container border-clear">
               <img src="images/case-1.png" alt="">
               <div class="overlay-to-top">
                 <p class="small margin-clear">Detalhe</p>
