progress 28.02 part II

--- a/template/index.html
+++ b/template/index.html
@@ -18,8 +18,8 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <!-- Web Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:700,500,400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,300italic,400,400italic,500,500italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:500,400,300,200' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 
@@ -140,9 +140,6 @@
                 <div class="header-second clearfix">
                   
                 <!-- main-navigation start -->
-                <!-- classes: -->
-                <!-- "onclick": Makes the dropdowns open on click, this the default bootstrap behavior e.g. class="main-navigation onclick" -->
-                <!-- "animated": Enables animations on dropdowns opening e.g. class="main-navigation animated" -->
                 <!-- ================ -->
                 <div class="main-navigation main-navigation--mega-menu  animated">
                   <nav class="navbar navbar-expand-lg navbar-light p-0">
@@ -409,7 +406,7 @@
             <div class="col-lg-6 order-lg-2">
               <div class="bordered text-center">
                 <img src="images/about-bg-image.png" alt="mvisia-youtube-channel">
-                <!--<a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil" class="overlay-link"><i class="fa fa-link"></i></a>-->
+
                 <div class="mb-20">
                   <a class="cta-youtube btn btn-transparent btn-animated" href="https://www.youtube.com/user/MVisiaBrasil">Assista aos nossos vídeos!<i class="fa fa-angle-double-right"></i></a>
                 </div>
@@ -861,9 +858,9 @@
                     <p>Máquinas de Visão e Inteligência Artificial</p>
                     <ul class="list-inline mb-20">
                       <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                      <li class="list-inline-item"><a href="tel:+00 1234567890" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</a></li>
-                      <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</a></li>
-                      <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
                     </ul>
                     <ul class="social-links circle animated-effect-1 margin-clear">
                       <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
