--- a/template/index.html
+++ b/template/index.html
@@ -18,8 +18,8 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <!-- Web Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,300italic,400,400italic,500,500italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:500,400,300,200' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,200,300,300italic,400,400italic,500,500italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:500,400,300,200,100' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 
@@ -82,7 +82,7 @@
                     <li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
                   </ul>
                   <div class="social-links hidden-md-up circle small">
-                    <div class="btn-group dropdown">
+                    <div class="btn-group dropdown" data-animation-effect="fadeIn" data-animation-effect="fadeOut" data-effect-delay="100">
                       <button id="header-top-drop-1" type="button" class="btn dropdown-toggle--no-caret" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-share-alt"></i></button>
                       <ul class="dropdown-menu dropdown-animation" aria-labelledby="header-top-drop-1">
                         <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
@@ -332,7 +332,7 @@
                   data-transform_in="y:[100%];sX:1;sY:1;s:900;e:Power4.easeInOut;"
                   data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;"
                   data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Incorporamos inteligência à agroindústria, gerando ganhos<br> de eficiência, precisão e produtividade
+                  data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;">Incorporamos inteligência à agroindústria para gerar<br> ganhos de eficiência, precisão e produtividade
                 </div>
                 </li>
 
