--- a/template/page-case-1.html
+++ b/template/page-case-1.html
@@ -288,7 +288,7 @@
               <div class="col-md-3">
                 <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-1.svg"></span>
-                  <h3>Alimentação</h3>
+                  <h4 class="card-title">Alimentação</h4>
                   <div class="separator clearfix"></div>
                   <p>Os tomates muito pequenos são removidos previamente por um sistema de rolos fixos ou no próprio polidor. A alimentação é feita dosando a quantidade de tomates em cada linha da máquina de forma ajustável.</p>
                 </div>
@@ -297,7 +297,7 @@
               <div class="col-md-3">
                 <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-2.svg"></span>
-                  <h3>Imagem</h3>
+                  <h4 class="card-title">Imagem</h4>
                   <div class="separator clearfix"></div>
                   <p>Após a singularização dos tomates nos carrinhos, a calibradora faz uma série de 8 fotografias de cada fruto, em posições diferentes, garantindo uma inspeção 360º.</p>
                 </div>
@@ -306,7 +306,7 @@
               <div class="col-md-3">
                 <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
-                  <h3>Classificação</h3>
+                  <h4 class="card-title">Classificação/h4>
                   <div class="separator clearfix"></div>
                   <p>Por meio de um algoritmo sofisticado, a calibradora avalia o tamanho de cada tomate, sua cor e eventuais defeitos na casca ou na forma. Uma vez definida a classe do tomate, ele é soprado no respectivo compartimento.</p>
                 </div>
@@ -315,7 +315,7 @@
               <div class="col-md-3">
                 <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <span class="icon default-bg circle"><img class="icon-circle" src="images/technology-3.svg"></span>
-                  <h3>Calibração</h3>
+                  <h4 class="card-title">Calibração</h4>
                   <div class="separator clearfix"></div>
                   <p> O critério de seleção é totalmente personalizável e pode ser feito de forma manual (o produtor define as faixas de tamanho para cada nível) ou automática, através da funcionalidade de aprendizado artificial.</p>
                 </div>
