--- a/template/css/typography-default.css
+++ b/template/css/typography-default.css
@@ -46,6 +46,7 @@ body {
 h1,
 h2,
 h3,
+h4,
 h5,
 h6 {
   color: #333333;
@@ -53,8 +54,7 @@ h6 {
 }
 
 h4 {
-  color: #777777;
-  font-weight: 200;
+  font-weight: 300;
 }
 
 h4.page-subtitle {
@@ -164,8 +164,8 @@ h5 {
 }
 
 h6 {
-  font-size: 13px;
-  font-weight: 700;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 /* Small devices (tablets, 768px and up) */
